; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_rave-sp.c_rave_sp_emulated_get_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_rave-sp.c_rave_sp_emulated_get_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rave_sp = type { i32 }
%struct.rave_sp_status = type { i32, i32 }

@RAVE_SP_CMD_GET_FIRMWARE_VERSION = common dso_local global i32 0, align 4
@RAVE_SP_CMD_GET_BOOTLOADER_VERSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rave_sp*, %struct.rave_sp_status*)* @rave_sp_emulated_get_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rave_sp_emulated_get_status(%struct.rave_sp* %0, %struct.rave_sp_status* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.rave_sp*, align 8
  %5 = alloca %struct.rave_sp_status*, align 8
  %6 = alloca [2 x i32], align 4
  %7 = alloca i32, align 4
  store %struct.rave_sp* %0, %struct.rave_sp** %4, align 8
  store %struct.rave_sp_status* %1, %struct.rave_sp_status** %5, align 8
  %8 = getelementptr inbounds [2 x i32], [2 x i32]* %6, i64 0, i64 0
  %9 = load i32, i32* @RAVE_SP_CMD_GET_FIRMWARE_VERSION, align 4
  store i32 %9, i32* %8, align 4
  %10 = getelementptr inbounds i32, i32* %8, i64 1
  store i32 0, i32* %10, align 4
  %11 = load %struct.rave_sp*, %struct.rave_sp** %4, align 8
  %12 = getelementptr inbounds [2 x i32], [2 x i32]* %6, i64 0, i64 0
  %13 = load %struct.rave_sp_status*, %struct.rave_sp_status** %5, align 8
  %14 = getelementptr inbounds %struct.rave_sp_status, %struct.rave_sp_status* %13, i32 0, i32 1
  %15 = call i32 @rave_sp_exec(%struct.rave_sp* %11, i32* %12, i32 8, i32* %14, i32 4)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* %7, align 4
  store i32 %19, i32* %3, align 4
  br label %28

20:                                               ; preds = %2
  %21 = load i32, i32* @RAVE_SP_CMD_GET_BOOTLOADER_VERSION, align 4
  %22 = getelementptr inbounds [2 x i32], [2 x i32]* %6, i64 0, i64 0
  store i32 %21, i32* %22, align 4
  %23 = load %struct.rave_sp*, %struct.rave_sp** %4, align 8
  %24 = getelementptr inbounds [2 x i32], [2 x i32]* %6, i64 0, i64 0
  %25 = load %struct.rave_sp_status*, %struct.rave_sp_status** %5, align 8
  %26 = getelementptr inbounds %struct.rave_sp_status, %struct.rave_sp_status* %25, i32 0, i32 0
  %27 = call i32 @rave_sp_exec(%struct.rave_sp* %23, i32* %24, i32 8, i32* %26, i32 4)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %20, %18
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @rave_sp_exec(%struct.rave_sp*, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
